public/css/styles.css
* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Pokemon";
   color: white;
}

@font-face {
    font-family: "Pokemon";
    src: url("./fonts/Pokemon-Pixel_Font.eot");
    src:
    url("./fonts/Pokemon-Pixel-Font.woff") format("woff")
}

body {
   font-size: 16px;
   font-weight: 400;
   font-family: "Pokemon";
}

.top-button-container, .bottom-button-container {
    border: solid 3px rgb(12, 0, 66);
    border-radius: 10px;
    width: 520px;
    background-color: white;
}

.pokemon2-battle-text {
    width: 300px;
    border-radius: 10px;
    background-color: rgb(44, 44, 44);
    color: white;
    border: solid 3px white;
    height: 206px;
    position: absolute;
    bottom: 2%;
    right: 40%;
    font-size: 40px;
    padding: 30px;
}

.pokemon1-battle-text {
    width: 300px;
    border-radius: 10px;
    background-color: rgb(44, 44, 44);
    color: white;
    border: solid 3px white;
    height: 206px;
    position: absolute;
    top: 2%;
    left: 40%;
    font-size: 40px;
    padding: 30px;
}



.battle-button {
    background-image: url("../img/battle-button.png");
    height: 44px;
    width: 127px;
    border: 0;
    background-color: rgba(255, 0, 0, 0)
}

.bottom-button-container {
    float: right;
    position: absolute;
    right: 13%;
    bottom: 2%;
}

.top-button-container {
    position: absolute;
    left: 13%;
    top: 2%;
}

.pokemon1-img {
    width: 200px;
    height: 200px;
}

.pokemon2-img {
    position: absolute;
    height: 500px;
    width: 500px;
    bottom: 0;
    left: 130px;
}

#footer {
    position: absolute;
    bottom: 0;
    margin-left: 10%;
    margin-right: 10%
}



.pokemon1-health {
    width: 193px;
    color: white;
    font-size: 30px;
    height: 30px;
    margin-left: 118px;
    padding-top: 1px;
}

.progress-bar {
    box-shadow: 0;
    border-radius: 1px;
}

.pokemon2-health {
    position: absolute;
    width: 300px;
    height: 165px;
    color: black;
    background-color: white;
    bottom: 5%;
    left: 1%;
    border-radius: 10px;
    font-size: 30px;
    padding: 10px;
}

.pokemon-health-bar {
    background-color: green;
}

.pokemon-attack-box {
    color: white;
    background-color: rgba(0, 0, 0, 0.514);
    width: 100%;
    height: 100px;
    font-size: 30px;
}

.pokemon-body {
    color: white;
}

.pokemon-container {
    
    padding: 8px;
    border-radius: 5px;
    margin: 10px;
    text-transform: capitalize;
}

.view-pokemon {
    width: 30%;
}

.all-pokemon {
    margin-top: 70px;
    height: 850px;
    overflow-y: auto;
  }
  
  .span-card {
    color: white;
    font-size: 20px;
    border-radius: 1px;
    margin: 2px 5px 2px 0;
    border: solid 1px black;
    display: inline-block;
    width: 75px;
    height: 30px;
  }
  
  .normal {
      background-color: #A8A878;
  }

  .water {
      background-color: #6890F0;
  }
  
  .fire {
      background-color: #F08030;
  }

  .fighting {
      background-color: #C03028;
  }

  .flying {
      background-color: #A890F0;
  }

  .grass {
      background-color: #78C850;
  }

  .poison {
      background-color: #A040A0;
  }

  .electric {
      background-color: #F8D030;
  }

  .ground {
      background-color: #E0C068;
  }

  .psychic {
      background-color: #F85888;
  }

  .rock {
      background-color: #B8A038;
  }

  .ice {
      background-color: #98D8D8;
  }

  .bug {
      background-color: #A8B820;
  }

  .dragon {
      background-color: #7038F8;
  }

  .ghost {
      background-color: #705898;
  }

  .dark {
      background-color: #705848;
  }

  .steel {
      background-color: #B8B8D0;
  }

  .fairy {
      background-color: #EE99AC;
  }


  .move {
    margin-right: 5px;
    margin-bottom: 5px;
    border: solid 1px white;
    background-color: rgb(20, 20, 20);
    color: white;
    border-radius: 2px;
    font-size: 15px;
    overflow-y: hidden;
    overflow-x: hidden;
    height: 40px;
    text-align: center;
    padding-top: 8px;
}
  

  .move-list {
      width: 22%;
  }

  .status-effect {
      height: 20px;
      width: 32px;
      border-radius: 6px;
  }

  .psn {
      background-color: purple;
      color: white;
  }

  .brn {
      background-color: red;
      color: white;
  }

  .par {
      background-color: yellow;
      color: white;
  }

  .slp {
      background-color: gray;
      color: white;
  }

  .frz {
      background-color: blue;
      color: white;
  }





  .selection-background {
    background: url("../img/background.png");
  }



.current-pokemon {
    color: black;
    width: 33%;
    float: left;
    margin-left: -27%
}

.progress-orange {
    background-color: #F5AC78;
}

.progress-bar-orange {
    background-color: #F08030;
}

.progress-bar-red {
    background-color: #FF0000;
}

.progress-red {
    background-color: #FF5959;
}

.progress-yellow {
    background-color: #FAE078;
}

.progress-yellow, .progress-red, .progress-orange, .progress-blue, .progress-green, .progress-pink {
    width: 81%;
    float: right;
    margin-top: 3px;
}


.progress-bar-yellow, .progress-bar-orange, .progress-bar-red, .progress-bar-green, .progress-bar-blue, .progress-bar-pink {
    font-size: 20px;
}

.progress-bar-yellow {
    background-color: #F8D030;
}

.progress-bar-blue {
    background-color: #6890F0;
}

.progress-bar-green {
    background-color: #78C850;
}

.progress-bar-pink {
    background-color: #F85888;
}

.progress-blue {
    background-color: #9DB7F5;
}

.progress-pink {
    background-color: #FA92B2;
}

.progress-green {
    background-color: #A7DB8D;
}


.statName {
    margin-bottom: 20px;
    font-size: 20px;
}


.selected-pokemon-img {
    height: 128px;
    width: 128px;
}

.pokemon-view-button {
    width: 216px;
    overflow: hidden;
    background: url("../img/button.png");
    border: 0;
    height: 72px;
}

.pokemon-search {
    width: 65%;
    float: right;
    margin-top: 20px;
}

.start-battle-button {
    float: right;
    margin-top: 20px;
    margin-right: 20px;
}

.fight-button {
    width: 248px;
    height: 51px;
    background: url("../img/fight-button.png");
    border: 0;
}

.not-fight-button {
    width: 248px;
    height: 51px;
    background: url("../img/waiting-for-fight.png");
    border: 0;
}

.pokemon-typing {
    white-space: nowrap;
    overflow: hidden;
    -webkit-animation: type 5s steps(50, end);
    animation: type 5s steps(50, end);
}

@keyframes type {
    from { width: 0; }
}

@-webkit-keyframes type {
    from { width: 0; }
}

.pokeball-loading {
    position: fixed;
    height: 210px;
    width: 280px;
    left: 50%;
    top: 50%;
    margin-left: -140px;
    margin-top: -105px;
    
}

.new-game-button {
    height: 200px;
    width: 200x;
    font-size: 50px;
    border-radius: 100px;
    background-color: rgba(255, 255, 255, 0);
    color: black;
    position: absolute;
    bottom: 160px;
    left: 510px;
}

.winning-text {
    font-size: 100px;
    color: black;
}






/* Testing Area */

.pokemon-select-stats {
    height: 80%;
    width: 60%;
}


.trainer-select-img {
    height: 200px;
    width: 200px;
}

.trainer-select-button-1 {
    color: white;
    background-color: black;
    border-radius: 2px;
    padding: 2px;
    padding-right: 4px;
    padding-left: 4px;
    font-size: 20px;
}

.trainer-select-button-2 {
    font-size: 20px;
    color: white;
    background-color: black;
    border-radius: 2px;
    padding: 2px;
    padding-right: 4px;
    padding-left: 4px;
}

.progress {
    border-radius: 2px;
    box-shadow: 0;
}



.select-move-button {
    border: solid 1px white;
}

.chosen-moves {
    font-size: 20px;
    margin: 5px;
    margin-left: 0;
}

.chosen-move {
    margin-right: 10px;
    margin-left: 10px;
}

.row {
    margin-left: 0;
}


.pokemon-health-icon {
    background: url("../img/battle-hud.png") no-repeat;
    height: 87px;
    width: 400px;
    padding-left: 50px;
    font-weight: 600;
}

.pokemon1-health-text {
    font-style: italic;
    margin-top: -23px;
}

.pokemon1-name {
    margin-left: 30px;
}

.trainer1-image {
    height: 150px;
    width: 150px;
}

.pokemon1-image {
    width: 200px;
    height: 200px;
}

.trainer2-image {
    height: 150px;
    width: 100px;
}

.pokemon-health-icon-2 {
    margin-top: 4%;
}

.battle-button-row {
    margin-top: 2%;
}

.pokemon-search-bar {
    background-image: url("../img/search-bar.png");
    height: 65px;
    width: 474px;
    border: 0;
    color: white;
    padding-left:55px;
    font-size: 34px;
    letter-spacing: 21px;
    overflow-x: hidden;
    margin-top: 30px;
    text-shadow: 2px 2px #a1a1a1;
}

